feat: Improve the GraphQL api and centralize the header definitions more